--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friendOverview.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friendOverview.jspx
@@ -14,6 +14,7 @@
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs"
 	xmlns:friends="urn:jsptagdir:/WEB-INF/tags/bstags/friends"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"> 
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -35,11 +36,7 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<ul>
-				<c:if test="${mtl:hasDidYouKnowMessage(command)}">
-					<li><bs:didYouKnow command="${command}"/></li>
-				</c:if>
-			</ul>
+			<bs:didYouKnow command="${command}"/>
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
