--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupDocument.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupDocument.jspx
@@ -11,6 +11,7 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -49,15 +50,12 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<ul>		
-				<parts:tagsAndConceptsForSidebar/>
-				
-				<!-- tagcloud -->
-				<li>
-					<h4 class="sidebar"><fmt:message key="tags"/></h4>
+			<parts:tagsAndConceptsForSidebar/>
+			<sidebar:sidebarItem textKey="tags">
+				<jsp:attribute name="content">
 					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-				</li>
-			</ul>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 		</jsp:attribute>	
 	</layout:resourceLayout>
 </jsp:root>
