--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/tag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/tag.jspx
@@ -59,48 +59,36 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-		<ul>
-			<div class="smalltext">
-				<parts:tagsAndConceptsForSidebar/>
-			</div>
+			<parts:tagsAndConceptsForSidebar/>
+
 			<fmt:message key="help.link.tag.similarRelated" var="helpLink"/>
 			
 			<!-- related tags -->
 			<c:if test="${not empty command.relatedTagCommand.relatedTags}">
-				<li>
-					<sidebar:sidebarHeader>
-						<jsp:attribute name="text">
-							<fmt:message key="relatedtags"/><c:out value=" " /><a href="${helpLink}"><span class="fa fa-question-circle"><!--  --></span></a>
-						</jsp:attribute>
-					</sidebar:sidebarHeader>
-					<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order="${command.order}"/>
-				</li>
+				<sidebar:sidebarItem textKey="relatedtags" helpLink="${helpLink}">
+					<jsp:attribute name="content">
+						<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order="${command.order}"/>
+					</jsp:attribute>		
+				</sidebar:sidebarItem>
 			</c:if>
 			
 			<!-- similar tags -->
 			<c:if test="${not empty command.similarTags.relatedTags}">
-				<li>
-					<sidebar:sidebarHeader>
-						<jsp:attribute name="text">
-							<fmt:message key="similartags"/><c:out value=" " /><a href="${helpLink}"><span class="fa fa-question-circle"><!--  --></span></a>
-						</jsp:attribute>
-					</sidebar:sidebarHeader>
-					<tags:similar requPath="${requPath}" cmd="${command.similarTags}"/>
-				</li>
+				<sidebar:sidebarItem textKey="similartags" helpLink="${helpLink}">
+					<jsp:attribute name="content">
+						<tags:similar requPath="${requPath}" cmd="${command.similarTags}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
 			</c:if>			
 			
 			<!-- related users -->
 			<c:if test="${not empty command.relatedUserCommand.relatedUsers}">
-				<li>
-					<sidebar:sidebarHeader>
-						<jsp:attribute name="text">
-							<fmt:message key="relatedusers"/>
-						</jsp:attribute>
-					</sidebar:sidebarHeader>
-					<users:related cmd="${command.relatedUserCommand}" userSimilarity="folkrank" displayFollowLink="${false}"/>
-				</li>			
+				<sidebar:sidebarItem textKey="relatedusers">
+					<jsp:attribute name="content">
+						<users:related cmd="${command.relatedUserCommand}" userSimilarity="folkrank" displayFollowLink="${false}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
 			</c:if>
-		</ul>
 		</jsp:attribute>
 		
 	</layout:resourceLayout>
