--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
@@ -14,6 +14,7 @@
 	xmlns:spheres="urn:jsptagdir:/WEB-INF/tags/bstags/spheres"
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs"	
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -38,20 +39,18 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<ul>
-	
-				<li><users:socializer command="${command}" /></li>
+			<users:socializer command="${command}" />
 				
-				<!-- Did you know? -->
-				<c:if test="${	command.context.userLoggedIn and 
-								command.context.loginUser.name eq command.requestedUser and 
-								mtl:hasDidYouKnowMessage(command) and
-								command.context.loginUser.settings.layoutSettings.simpleInterface}">
-					<li><bs:didYouKnow command="${command}"/></li>
-				</c:if>
+			<!-- Did you know? -->
+			<c:if test="${	command.context.userLoggedIn and 
+							command.context.loginUser.name eq command.requestedUser and 
+							mtl:hasDidYouKnowMessage(command) and
+							command.context.loginUser.settings.layoutSettings.simpleInterface}">
+				<bs:didYouKnow command="${command}"/>
+			</c:if>
 				
-				<!-- link to discussed user page -->
-				<c:if test="${not command.context.userLoggedIn or command.context.loginUser.name ne command.requestedUser}">
+			<!-- link to discussed user page -->
+			<c:if test="${not command.context.userLoggedIn or command.context.loginUser.name ne command.requestedUser}">
 				<li>
 					<h4 class="sidebar"><fmt:message key="post.resource.discussion.headline"/></h4>
 					<ul class="discussionSidebarContent sidebar_collapse_content">
@@ -70,40 +69,37 @@
 				</c:if>
 				
 				<!-- display user's tag relations -->
-				<li>
-					<h4 class="sidebar concepts-headline sidebar-headline">
-						<fmt:message key="tagrelations"/>
-					</h4>
-					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}"/>
-				</li>
-	
-				<!-- display similar users -->
-				<li>
-					<h4 class="sidebar similar-users-headline sidebar-headline">
-						<!-- requPath + query -->
-						<c:set var="requPathAndQuery" value="/${requPath}${requQueryString}"/>
-						<fmt:message key="users.similar"/>
-					</h4>
-					<ul class="list-inline sidebar-setting-box clearfix">
-						<li>(<a href="${mtl:setParam(requPathAndQuery, 'userSimilarity', mtl:toggleUserSimilarity(command.userSimilarity)) }"><fmt:message key="more"/>...</a>)</li>
-					</ul>
-					
-					<users:related cmd="${command.relatedUserCommand}" displayFollowLink="${false}" personalized="${true}" userSimilarity="${command.userSimilarity}"/>
-				</li>
-		
-				<!-- display tags -->
-				<li>
-					<h4 class="tagcloud-headline sidebar-headline sidebar"><fmt:message key="tags"/></h4>
-					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" tagSizeMode="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-				</li>
+				<sidebar:sidebarItem textKey="tagrelations">
+					<jsp:attribute name="content">
+						<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
 				
+				<!-- display similar users -->
+				<sidebar:sidebarItem textKey="users.similar">
+					<jsp:attribute name="content">
+						<c:set var="requPathAndQuery" value="/${requPath}${requQueryString}"/>
+						<ul class="list-inline sidebar-setting-box clearfix">
+							<li>(<a href="${mtl:setParam(requPathAndQuery, 'userSimilarity', mtl:toggleUserSimilarity(command.userSimilarity)) }"><fmt:message key="more"/>...</a>)</li>
+						</ul>
+						<users:related cmd="${command.relatedUserCommand}" displayFollowLink="${false}" personalized="${true}" userSimilarity="${command.userSimilarity}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
+					
+				<!-- display tags -->
+				<sidebar:sidebarItem textKey="tags">
+					<jsp:attribute name="content">
+						<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" tagSizeMode="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
+							
 				<c:if test="${command.context.loginUser.role == 'ADMIN' and not empty command.user}">
-					<li>
-						<h4 class="sidebar admininfo-headline sidebar-headline">user details</h4>
-						<user:details user="${command.user}"/>
-					</li>
+					<sidebar:sidebarItem textKey="user.details">
+						<jsp:attribute name="content">
+							<user:details user="${command.user}"/>
+						</jsp:attribute>
+					</sidebar:sidebarItem>
 				</c:if>
-			</ul>
 		</jsp:attribute> <!-- sidebar -->
 	</layout:resourceLayout>
 </jsp:root>
