--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/user.jspx
@@ -51,22 +51,23 @@
 				
 			<!-- link to discussed user page -->
 			<c:if test="${not command.context.userLoggedIn or command.context.loginUser.name ne command.requestedUser}">
-				<li>
-					<h4 class="sidebar"><fmt:message key="post.resource.discussion.headline"/></h4>
-					<ul class="discussionSidebarContent sidebar_collapse_content">
-						<li>
-							<h5 class="discussion-headline sidebar-headline">
-									<fmt:message key="discussion.byUser.help" var="title">
-										<fmt:param value="${fn:escapeXml(command.requestedUser)}"/>
-									</fmt:message>
-							</h5>
-							<a href="${relativeUrlGenerator.prefix('discussed').getUserUrlByUserName(fn:escapeXml(command.requestedUser))}" title="${title}">
-								<fmt:message key="discussion.byUser"><fmt:param value="${fn:escapeXml(command.requestedUser)}"/></fmt:message>
-							</a>
-						</li>
-					</ul>
-				</li>
-				</c:if>
+				<sidebar:sidebarItem textKey="post.resource.discussion.headline">
+					<jsp:attribute name="content">
+						<ul class="discussionSidebarContent sidebar_collapse_content">
+							<li>
+								<h5 class="discussion-headline sidebar-headline">
+										<fmt:message key="discussion.byUser.help" var="title">
+											<fmt:param value="${fn:escapeXml(command.requestedUser)}"/>
+										</fmt:message>
+								</h5>
+								<a href="${relativeUrlGenerator.prefix('discussed').getUserUrlByUserName(fn:escapeXml(command.requestedUser))}" title="${title}">
+									<fmt:message key="discussion.byUser"><fmt:param value="${fn:escapeXml(command.requestedUser)}"/></fmt:message>
+								</a>
+							</li>
+						</ul>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
+			</c:if>
 				
 				<!-- display user's tag relations -->
 				<sidebar:sidebarItem textKey="tagrelations">
