--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
@@ -123,7 +123,7 @@
 													<div class="media-body" id="titletext">
 														<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bibtex"/></div>
 														<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" />
-															<c:if test="${newestPost.approved==1}">
+															<c:if test="${newestPost.approved}">
 																<a title="${fn:escapeXml(approved)}">
 																	<span class="fa fa-check-circle" style="margin-left:6px;"><!--  --></span>
 																</a>
@@ -214,7 +214,7 @@
 												<td class="col-sm-1"  id="versionNum" style="border-right:1px solid #eee">
 													<span class="label label-default" style="vertical-align:bottom;padding:8px;">
 														Ver. ${fieldlength-index}
-														<c:if test="${listView.list[(fieldlength-index)].approved==1}">
+														<c:if test="${listView.list[(fieldlength-index)].approved}">
 															<a title="${fn:escapeXml(approved_revision)}">
 																<span class="fa fa-check-circle" style="vertical-align:bottom;padding-left:3px;"><!--  --></span>
 															</a>
