--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupDocument.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupDocument.jspx
@@ -51,11 +51,8 @@
 		
 		<jsp:attribute name="sidebar">
 			<parts:tagsAndConceptsForSidebar/>
-			<sidebar:sidebarItem textKey="tags">
-				<jsp:attribute name="content">
-					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-				</jsp:attribute>
-			</sidebar:sidebarItem>
+			<sidebar:sidebarTagCloudItem requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
 		</jsp:attribute>	
+
 	</layout:resourceLayout>
 </jsp:root>
