--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/register/saml/limitedAccountActivation.jspx
@@ -132,11 +132,8 @@
 			busy tag box 
 			-->
 		<jsp:attribute name="sidebar">
-			<sidebar:sidebarItem textKey="busytags">
-				<jsp:attribute name="content">
-					<tags:cloud requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" tagSizeMode="home"/>
-				</jsp:attribute>
-			</sidebar:sidebarItem>
+			<sidebar:sidebarTagCloudItem textKey="busytags" requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" tagSizeMode="home"/>
 		</jsp:attribute>
+
 	</layout:paneLayout>
 </jsp:root>
