--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friend.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/friend.jspx
@@ -43,14 +43,10 @@
 		</jsp:attribute>
 		
         <jsp:attribute name="sidebar">
-			<sidebar:sidebarItem textKey="tags">
-				<jsp:attribute name="content">
-		      		<c:if test="${not empty command.requestedTags}">
-			    		<c:set var="requPath" value="${mtl:getLowerPath(requPath)}" />
-		      		</c:if>
-		    		<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-		    	</jsp:attribute>
-		    </sidebar:sidebarItem>
+      		<c:if test="${not empty command.requestedTags}">
+	    		<c:set var="requPath" value="${mtl:getLowerPath(requPath)}" />
+      		</c:if>
+			<sidebar:sidebarTagCloudItem requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
         </jsp:attribute>	
 	</layout:resourceLayout>
 </jsp:root>
