--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/popular.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/popular.jspx
@@ -32,11 +32,7 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<sidebar:sidebarItem textKey="busytags">
-				<jsp:attribute name="content">
-					<tags:cloud requPath="tag" cmd="${command.tagcloud}"/>
-				</jsp:attribute>
-			</sidebar:sidebarItem>
+			<sidebar:sidebarTagCloudItem textKey="busytags" requPath="tag" cmd="${command.tagcloud}"/>
 		</jsp:attribute>
 
 	</layout:popularResourceLayout>
