--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userDocument.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userDocument.jspx
@@ -11,6 +11,7 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -48,28 +49,23 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-			<ul>
-				<div class="smalltext">
-					<parts:tagsAndConceptsForSidebar/>
-				</div>
+			<parts:tagsAndConceptsForSidebar/>
 				
-				<!-- display user's tag relations -->
-				<li>
+			<!-- display user's tag relations -->
+			<sidebar:sidebarItem textKey="tagrelations">
+				<jsp:attribute name="content">
 					<fmt:message key="tagrelations.title" var="tagRelationsTitle"/>
-					<h4 class="sidebar">
+					<p>
 						<a href="${relativeUrlGenerator.getConceptsUrlByString(fn:escapeXml(command.requestedUser))}" title="${tagRelationsTitle}">
-							<fmt:message key="tagrelations" />
+							<fmt:message key="tagrelations.title" />
 						</a>
-					</h4>
+					</p>
 					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}"/>
-				</li>
-				
-				<!-- display tags -->
-				<li>
-					<h4 class="sidebar"><fmt:message key="tags"/></h4>
-					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
-				</li>
-			</ul>
+				</jsp:attribute>
+			</sidebar:sidebarItem>				
+
+			<sidebar:sidebarTagCloudItem requPath="${requPath}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
+
 		</jsp:attribute>
 		
 		<!--+
