remove camel case from DB query

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groups.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groups.jspx
@@ -126,7 +126,7 @@
 												<a class="btn btn-default btn-sm">pending</a>
 											</c:when>
 											<c:otherwise>
-												<c:if test="${group.allowJoin eq true}">
+												<c:if test="${group.allowJoin}">
 													<c:url var="joinLink" value="/joinGroup">
 														<c:param name="group" value="${group.name}" />
 													</c:url>
