--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userpersonalized.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/userpersonalized.jspx
@@ -33,7 +33,6 @@
 		
 		<!--  create sidebar -->
 		<jsp:attribute name="sidebar">
-		<ul>
 				<!-- we need to switch if the user already follows this user or not 
 				<c:if test="${command.context.loginUser.name != command.requestedUser}">
 				<c:choose>
@@ -78,36 +77,36 @@
 			</li>
 			-->
 			<!-- display tags -->
-			<li>
-				<sidebar:sidebarHeader textKey="tags" />
-				<fmt:message key="personalized.tag.info">
-					<fmt:param>
-						<user:username username="${command.requestedUser}" />
-					</fmt:param>
-				</fmt:message>
-				<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagSizeMode="home" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" suppressTitle="${true}"/>
-			</li>
+			<sidebar:sidebarItem textKey="tags" >
+				<jsp:attribute name="content">
+					<fmt:message key="personalized.tag.info">
+						<fmt:param>
+							<user:username username="${command.requestedUser}" />
+						</fmt:param>
+					</fmt:message>
+					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" tagSizeMode="home" showTooltips="${command.context.loginUser.settings.tagboxTooltip}" suppressTitle="${true}"/>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 			
 			<!-- TODO: extract tagx file see user.jspx -->
 			<c:if test="${not empty command.relatedUserCommand.relatedUsers}">
 				<!-- display similar users -->
-				<li>
-					<sidebar:sidebarHeader>
-						<jsp:attribute name="text">
-							<fmt:message key="users.similar.for">
-								<fmt:param>
-									<user:username username="${command.requestedUser}" noLink="${true}" />
-								</fmt:param>
-							</fmt:message>
-						</jsp:attribute>
-					</sidebar:sidebarHeader>
-					<ul class="list-inline sidebar-setting-box clearfix">
-						<li>(<a href="${mtl:setParam(requPathAndQuery, 'userSimilarity', mtl:toggleUserSimilarity(command.userSimilarity)) }"><fmt:message key="more"/>...</a>)</li>
-					</ul>
-					<users:related cmd="${command.relatedUserCommand}" personalized="${true}" userSimilarity="${command.userSimilarity}"/>
-				</li>
+				<sidebar:sidebarItem>
+					<jsp:attribute name="text">
+						<fmt:message key="users.similar.for">
+							<fmt:param>
+								<user:username username="${command.requestedUser}" noLink="${true}" />
+							</fmt:param>
+						</fmt:message>
+					</jsp:attribute>
+					<jsp:attribute name="content">
+						<ul class="list-inline sidebar-setting-box clearfix">
+							<li>(<a href="${mtl:setParam(requPathAndQuery, 'userSimilarity', mtl:toggleUserSimilarity(command.userSimilarity)) }"><fmt:message key="more"/>...</a>)</li>
+						</ul>
+						<users:related cmd="${command.relatedUserCommand}" personalized="${true}" userSimilarity="${command.userSimilarity}"/>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
 			</c:if>
-		</ul>
 		</jsp:attribute>
 		
 		<!--  heading for the content pane of the given page -->
