--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/usertag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/usertag.jspx
@@ -39,28 +39,25 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="sidebar">
-		<ul>
-			<div class="smalltext">
-				<parts:tagsAndConceptsForSidebar />
-			</div>
+			<parts:tagsAndConceptsForSidebar />
 
 			<!-- display related tags -->
-			<li>
-				<sidebar:sidebarHeader textKey="relatedtags" />
-				<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order="${command.order}"/>
-			</li>
-			
+			<sidebar:sidebarItem textKey="relatedtags">
+				<jsp:attribute name="content">
+					<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order="${command.order}"/>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 			
 			<!-- display user's tag relations -->
-			<li>
-				<sidebar:sidebarHeader>
-					<jsp:attribute name="text">
-						<fmt:message key="tagrelations.title" var="tagRelationsTitle"/>
-						<fmt:message key="tagrelations"/><c:out value=" " /><small>(<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}" title="${tagRelationsTitle}"><fmt:message key="overview"/></a>)</small>
-					</jsp:attribute>
-				</sidebar:sidebarHeader>
-				<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}"/>
-			</li>
+			<sidebar:sidebarItem>
+				<jsp:attribute name="text">
+					<fmt:message key="tagrelations.title" var="tagRelationsTitle"/>
+					<fmt:message key="tagrelations"/><c:out value=" " /><small>(<a href="${relativeUrlGenerator.getConceptsUrlByString(command.requestedUser)}" title="${tagRelationsTitle}"><fmt:message key="overview"/></a>)</small>
+				</jsp:attribute>
+				<jsp:attribute name="content">
+					<tags:concepts cmd="${command.concepts}" usersOwnRelations="${command.context.loginUser.name eq command.requestedUser}" requestedUserName="${command.requestedUser}"/>
+				</jsp:attribute>
+			</sidebar:sidebarItem>
 			
 			<!-- display tags -->
 			<li>
